--- a/charts/argo-cd/templates/aggregate-roles.yaml
+++ b/charts/argo-cd/templates/aggregate-roles.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.rbac.aggregateRoles }}
+{{- if .Values.global.rbac.aggregateRoles }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
