--- a/charts/argo-cd/templates/argocd-application-controller/clusterrole.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/clusterrole.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.rbac.clusterAdmin }}
+{{- if .Values.global.rbac.clusterAdmin }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
