--- a/charts/argo-cd/templates/argocd-server/hpa.yaml
+++ b/charts/argo-cd/templates/argocd-server/hpa.yaml
@@ -2,18 +2,18 @@
 apiVersion: {{ include "argo-cd.apiVersion.autoscaling" . }}
 kind: HorizontalPodAutoscaler
 metadata:
+  name: {{ include "argo-cd.server.fullname" . }}-hpa
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" (printf "%s-hpa" .Values.server.name)) | nindent 4 }}
-  name: {{ template "argo-cd.server.fullname" . }}-hpa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ template "argo-cd.server.fullname" . }}
+    name: {{ include "argo-cd.server.fullname" . }}
   minReplicas: {{ .Values.server.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.server.autoscaling.maxReplicas }}
   metrics:
-  {{- with .Values.server.autoscaling.targetMemoryUtilizationPercentage }}
+    {{- with .Values.server.autoscaling.targetMemoryUtilizationPercentage }}
     - type: Resource
       resource:
         name: memory
@@ -24,8 +24,8 @@ spec:
           averageUtilization: {{ . }}
           type: Utilization
         {{- end }}
-  {{- end }}
-  {{- with .Values.server.autoscaling.targetCPUUtilizationPercentage }}
+    {{- end }}
+    {{- with .Values.server.autoscaling.targetCPUUtilizationPercentage }}
     - type: Resource
       resource:
         name: cpu
@@ -36,7 +36,7 @@ spec:
           averageUtilization: {{ . }}
           type: Utilization
         {{- end }}
-  {{- end }}
+    {{- end }}
   {{- with .Values.server.autoscaling.behavior }}
   behavior:
     {{- toYaml . | nindent 4 }}
