Add apiVersion for PDBs
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/templates/argocd-repo-server/poddisruptionbudget.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/poddisruptionbudget.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.repoServer.pdb.enabled }}
-apiVersion: {{ include "argo-cd.apiVersion.podDisruptionBudget" . }}
+apiVersion: {{ include "argo-cd.apiVersion.pdb" . }}
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "argo-cd.repoServer.fullname" . }}
