--- a/charts/argo-cd/templates/argocd-applicationset/poddisruptionbudget.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/poddisruptionbudget.yaml
@@ -1,5 +1,5 @@
 {{- if and .Values.applicationSet.enabled .Values.applicationSet.pdb.enabled }}
-apiVersion: {{ include "argo-cd.apiVersion.podDisruptionBudget" . }}
+apiVersion: {{ include "argo-cd.apiVersion.pdb" . }}
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "argo-cd.applicationSet.fullname" . }}
