--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -23,6 +23,8 @@ apiVersionOverrides:
   autoscaling: "" # autoscaling/v2
   # -- String to override apiVersion of ingresses rendered by this helm chart
   ingress: "" # networking.k8s.io/v1beta1
+  # -- String to override apiVersion of pod disruption budgets rendered by this helm chart
+  pdb: "" # policy/v1
 
 ## Custom resource configuration
 crds:
