--- a/charts/argo-cd/templates/argocd-repo-server/pdb.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/pdb.yaml
@@ -2,7 +2,7 @@
 apiVersion: {{ include "argo-cd.apiVersion.pdb" . }}
 kind: PodDisruptionBudget
 metadata:
-  name: {{ template "argo-cd.repoServer.fullname" . }}
+  name: {{ include "argo-cd.repoServer.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.repoServer.name "name" .Values.repoServer.name) | nindent 4 }}
     {{- with .Values.repoServer.pdb.labels }}
@@ -16,11 +16,9 @@ metadata:
   {{- end }}
 spec:
   {{- if .Values.repoServer.pdb.minAvailable }}
-  minAvailable: {{ .Values.repoServer.pdb.minAvailable }}
-  {{- else if .Values.repoServer.pdb.maxUnavailable }}
   maxUnavailable: {{ .Values.repoServer.pdb.maxUnavailable }}
   {{- else }}
-  minAvailable: 0
+  minAvailable: {{ .Values.repoServer.pdb.minAvailable | default 0 }}
   {{- end }}
   selector:
     matchLabels:
