--- a/charts/argo-cd/templates/dex/pdb.yaml
+++ b/charts/argo-cd/templates/dex/pdb.yaml
@@ -1,8 +1,8 @@
-{{- if .Values.dex.pdb.enabled }}
+{{- if and .Values.dex.enabled .Values.dex.pdb.enabled }}
 apiVersion: {{ include "argo-cd.apiVersion.pdb" . }}
 kind: PodDisruptionBudget
 metadata:
-  name: {{ template "argo-cd.dex.fullname" . }}
+  name: {{ include "argo-cd.dex.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.dex.name "name" .Values.dex.name) | nindent 4 }}
     {{- with .Values.dex.pdb.labels }}
@@ -15,7 +15,7 @@ metadata:
     {{- end }}
   {{- end }}
 spec:
-  {{- if .Values.dex.pdb.maxUnavailable }}
+  {{- if .Values.dex.pdb.minAvailable }}
   maxUnavailable: {{ .Values.dex.pdb.maxUnavailable }}
   {{- else }}
   minAvailable: {{ .Values.dex.pdb.minAvailable | default 0 }}
