Drop external redis and update README
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -31,4 +31,5 @@ annotations:
     - "[Changed]: Configuration sections have been refactored and unified"
     - "[Changed]: Manifests have been fully aligned with upstream repository"
     - "[Changed]: ApplicationSet and Notification controllers are now tightly integrated"
+    - "[Removed]: External Redis feature as it's possible to configure this by other means"
     - "[Removed]: Deprecated configuration options"
