--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -26,6 +26,7 @@ annotations:
     - "[Fixed]: Some Redis resources were improperly created when redis-ha is enabled"
     - "[Fixed]: Cluster-wide installation now properly watches Application resources in other namespaces"
     - "[Added]: The `global.domain` option used on various places such as ingress, certs, SSO, notifications"
+    - "[Added]: Support for default affinity rules"
     - "[Added]: Missing labels, annotations, pod distrubtion budgets, topology contrainsts"
     - "[Changed]: Reworked ingress to support `global.domain` and more seamless integration with cloud providers"
     - "[Changed]: Configuration sections have been refactored and unified"
