fix(argo-cd): Added missing envFrom for notifications-controller. Fixed env formatting
Signed-off-by: bakala <Sebastian.Bakala@tomtom.com>

--- a/charts/argo-cd/templates/argocd-notifications/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/deployment.yaml
@@ -60,7 +60,12 @@ spec:
           securityContext: {{- toYaml .Values.notifications.containerSecurityContext | nindent 12 }}
           {{- end }}
           {{- with .Values.notifications.extraEnv }}
-          env: {{ toYaml . | nindent 12 }}
+          env:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          {{- with .Values.notifications.extraEnvFrom }}
+          envFrom:
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           volumeMounts:
             - name: tls-certs
