--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2269,6 +2269,14 @@ notifications:
   # -- Additional container environment variables
   extraEnv: []
 
+  # -- envFrom to pass to the controller
+  # @default -- `[]` (See [values.yaml])
+  extraEnvFrom: []
+    # - configMapRef:
+    #     name: config-map-name
+    # - secretRef:
+    #     name: secret-name
+
   # -- List of extra mounts to add (normally used with extraVolumes)
   extraVolumeMounts: []
     # - mountPath: /tmp/foobar
