Add missing service account labels
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/templates/dex/serviceaccount.yaml
+++ b/charts/argo-cd/templates/dex/serviceaccount.yaml
@@ -6,6 +6,9 @@ metadata:
   name: {{ include "argo-cd.dex.serviceAccountName" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.dex.name "name" .Values.dex.name) | nindent 4 }}
+    {{- with .Values.dex.serviceAccount.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   {{- with .Values.dex.serviceAccount.annotations }}
   annotations:
     {{- range $key, $value := . }}
