--- a/charts/argo-cd/templates/redis/serviceaccount.yaml
+++ b/charts/argo-cd/templates/redis/serviceaccount.yaml
@@ -7,6 +7,9 @@ metadata:
   name: {{ include "argo-cd.redis.serviceAccountName" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.redis.name "name" .Values.redis.name) | nindent 4 }}
+    {{- with .Values.redis.serviceAccount.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   {{- with .Values.redis.serviceAccount.annotations }}
   annotations:
     {{- range $key, $value := . }}
