--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1528,6 +1528,8 @@ server:
     name: ""
     # -- Annotations applied to created service account
     annotations: {}
+    # -- Labels applied to created service account
+    labels: {}
     # -- Automount API credentials for the Service Account
     automountServiceAccountToken: true
 
@@ -1780,6 +1782,8 @@ repoServer:
     name: ""
     # -- Annotations applied to created service account
     annotations: {}
+    # -- Labels applied to created service account
+    labels: {}
     # -- Automount API credentials for the Service Account
     automountServiceAccountToken: true
 
@@ -2058,6 +2062,8 @@ applicationSet:
     name: ""
     # -- Annotations to add to the service account
     annotations: {}
+    # -- Labels applied to created service account
+    labels: {}
     # -- Automount API credentials for the Service Account
     automountServiceAccountToken: true
 
@@ -2270,6 +2276,8 @@ notifications:
         name: ""
         # -- Annotations applied to created service account
         annotations: {}
+        # -- Labels applied to created service account
+        labels: {}
         # -- Automount API credentials for the Service Account
         automountServiceAccountToken: true
 
@@ -2316,6 +2324,8 @@ notifications:
     name: ""
     # -- Annotations applied to created service account
     annotations: {}
+    # -- Labels applied to created service account
+    labels: {}
     # -- Automount API credentials for the Service Account
     automountServiceAccountToken: true
 
@@ -2539,6 +2549,8 @@ dex:
     name: ""
     # -- Annotations applied to created service account
     annotations: {}
+    # -- Labels applied to created service account
+    labels: {}
     # -- Automount API credentials for the Service Account
     automountServiceAccountToken: true
 
@@ -2759,6 +2771,8 @@ redis:
     name: ""
     # -- Annotations applied to created service account
     annotations: {}
+    # -- Labels applied to created service account
+    labels: {}
     # -- Automount API credentials for the Service Account
     automountServiceAccountToken: false
 
