--- a/charts/argo-cd/templates/argocd-notifications/bots/slack/serviceaccount.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/bots/slack/serviceaccount.yaml
@@ -4,12 +4,15 @@ kind: ServiceAccount
 automountServiceAccountToken: {{ .Values.notifications.bots.slack.serviceAccount.automountServiceAccountToken }}
 metadata:
   name: {{ include "argo-cd.notifications.bots.slack.serviceAccountName" . }}
+  labels:
+    {{- include "argo-cd.labels" (dict "context" . "component" .Values.notifications.bots.slack.name "name" .Values.notifications.bots.slack.name) | nindent 4 }}
+    {{- with .Values.notifications.bots.slack.ServiceAccount.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   {{- with .Values.notifications.bots.slack.serviceAccount.annotations }}
   annotations:
     {{- range $key, $value := . }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
   {{- end }}
-  labels:
-    {{- include "argo-cd.labels" (dict "context" . "component" .Values.notifications.bots.slack.name "name" .Values.notifications.bots.slack.name) | nindent 4 }}
 {{- end }}
