--- a/charts/argo-cd/templates/argocd-repo-server/serviceaccount.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/serviceaccount.yaml
@@ -6,6 +6,9 @@ metadata:
   name: {{ include "argo-cd.repoServer.serviceAccountName" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.repoServer.name "name" .Values.repoServer.name) | nindent 4 }}
+    {{- with .Values.repoServer.serviceAccount.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   {{- with .Values.repoServer.serviceAccount.annotations }}
   annotations:
     {{- range $key, $value := . }}
