Update rule expression for missing Argo apps
Signed-off-by: Evan Lock <elock@barracuda.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -567,7 +567,7 @@ controller:
       spec: []
       # - alert: ArgoAppMissing
       #   expr: |
-      #     absent(argocd_app_info)
+      #     absent(argocd_app_info) == 1
       #   for: 15m
       #   labels:
       #     severity: critical
