Added minimum permissions to workflows
Signed-off-by: Eddie Knight <iv.eddieknight@gmail.com>

--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -1,6 +1,10 @@
 ## Reference: https://github.com/helm/chart-testing-action
 name: Linting and Testing
 on: pull_request
+
+permissions:
+  contents: read
+
 jobs:
   chart-test:
     runs-on: ubuntu-latest
