--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -74,3 +74,50 @@ projects: []
 #     manualSync: true
 #   signatureKeys:
 #   - keyID: ABCDEF1234567890
+
+# -- Deploy Argo CD ApplicationSets within this helm release
+# @default -- `[]` (See [values.yaml])
+## Ref: https://argo-cd.readthedocs.io/en/stable/operator-manual/applicationset/
+applicationsets: []
+# - name: guestbook
+#   namespace: argocd
+#   additionalLabels: {}
+#   additionalAnnotations: {}
+#   # See PR #10026 (ArgoCD v2.5 or later)
+#   # goTemplate: false
+#   generators:
+#   - git:
+#       repoURL: https://github.com/argoproj/argocd-example-apps.git
+#       revision: HEAD
+#       directories:
+#       - path: guestbook
+#       - path: kustomize-*
+#   template:
+#     metadata:
+#       name: '{{path.basename}}'
+#       labels: {}
+#       annotations: {}
+#     spec:
+#       project: default
+#       source:
+#         repoURL: https://github.com/argoproj/argocd-example-apps.git
+#         targetRevision: HEAD
+#         path: '{{path}}'
+#       destination:
+#         server: https://kubernetes.default.svc
+#         namespace: default
+#       syncPolicy:
+#         automated:
+#           prune: false
+#           selfHeal: false
+#       ignoreDifferences:
+#       - group: apps
+#         kind: Deployment
+#         jsonPointers:
+#         - /spec/replicas
+#       info:
+#       - name: url
+#         value: https://argoproj.github.io/
+#   syncPolicy:
+#     # Set Application finalizer
+#     preserveResourcesOnDeletion: false
