--- a/charts/argocd-apps/ci/applicationsets-values.yaml
+++ b/charts/argocd-apps/ci/applicationsets-values.yaml
@@ -2,7 +2,7 @@
 
 applicationsets:
 - name: guestbook
-  namespace: argocd
+  namespace: default # Only for test purpose.
   additionalLabels: {}
   additionalAnnotations: {}
   # See PR #10026 (ArgoCD v2.5 or later)
