--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -59,12 +59,16 @@ jobs:
         if: steps.list-changed.outputs.changed == 'true'
         with:
           config: .github/configs/kind-config.yaml
-
+          
       - name: Deploy latest ArgoCD CRDs when testing ArgoCD extensions
         if: |
-          contains(steps.list-changed.outputs.changed_charts, 'argocd-image-updater')
+          contains(steps.list-changed.outputs.changed_charts, 'argocd-image-updater') ||
+          contains(steps.list-changed.outputs.changed_charts, 'argocd-apps')
         run: |
-          kubectl apply -f charts/argo-cd/templates/crds
+          helm repo add dandydeveloper https://dandydeveloper.github.io/charts/
+          helm dependency build .
+          ls templates/crds/* | xargs -r -L 1 helm template . -s ${@} | kubectl apply -f -
+        working-directory: ./charts/argo-cd
 
       - name: Skip HPA tests of ArgoCD
         if: contains(steps.list-changed.outputs.changed_charts, 'argo-cd')
