--- a/charts/argo-cd/templates/argocd-server/pdb.yaml
+++ b/charts/argo-cd/templates/argocd-server/pdb.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.server.pdb.enabled }}
-apiVersion: {{ include "argo-cd.podDisruptionBudget.apiVersion" . }}
+apiVersion: {{ include "argo-cd.apiVersion.pdb" . }}
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "argo-cd.server.fullname" . }}
